--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,15 @@
 body{
     font-size: 16px;
 }
+.r-regularfont{
+    font-family: 'RobotoRegular';
+}
+.g-blackfont{
+    font-family:'GothamBlack';
+}
+.g-boldfont{
+    font-family:'GothamBold';
+}
 h1{
     font-family:'GothamBlack';
     font-size: 2.2em;
@@ -47,6 +56,32 @@ h3{
     font-family:'GothamBlack';
     text-align: center;
     font-size: 1.8em;
+}
+h2.redline{
+    position: relative;
+}
+h2.redline::after{
+    content: '';
+    position: absolute;    
+    width: 35px;
+    height: 3px;
+    background: #BD0F14;
+    border-radius: 2px;
+    left: 0;
+    top: 2.4em;
+}
+h5.redline-simple{
+    position: relative;
+}
+h5.redline-simple::after{
+    content: '';
+    position: absolute;    
+    width: 35px;
+    height: 3px;
+    background: #BD0F14;
+    border-radius: 2px;
+    left: 0;
+    top: 1.2em;
 }
 p.dark{
     font-family:'RobotoRegular';
@@ -302,6 +337,40 @@ section{
     width: 1em;
     margin-left: -1em;
 }
+.gray-cl-bg{
+    background: #b0b6ba3a; 
+}
+.rbox{
+    border-radius: 5px;
+}
+.w-rbox-l{
+    border-radius: 0 5px 5px 0;
+}
+.bordered-box{
+    border: 1px solid #B0B6BA;
+}
+.wb-r{
+    border-right: none !important;
+}
+.wb-l{
+    border-left: none !important;
+}
+
+.red-dot-list ul{
+    list-style: none;
+}
+.red-dot-list ul li::before{
+    content: "\2022";
+    color: #BD0F14;
+    font-weight: bold;
+    display: inline-block; 
+    width: 1em;
+    margin-left: -1em;
+}
+.red-dot-list ul li{
+    padding-bottom: 1.2em;
+}
+
 .pagination{
     font-family:'GothamMedium';
     margin-top: 2em;
@@ -400,6 +469,79 @@ section{
 .search-box .input-group-text img{
     margin-top: 6px;
 }
+.proteger{
+    background-image: url(../img/bg-dg.png);
+    height: 330px;
+}
+.proteger p{
+    color: #253150;
+    max-width: 530px;
+    margin-bottom: 2em;
+    margin-top: 2em;
+    font-size: 16px;
+}
+h5{
+    font-size: 28px;
+    position: relative;
+}
+h5.redline::after{
+    content: '';
+    position: absolute;    
+    width: 35px;
+    height: 3px;
+    background: #BD0F14;
+    border-radius: 2px;
+    left: 0;    
+    top: 2.4em;
+}
+.seguro h5,.info-seguro h5{
+    margin-left: 1em;
+    margin-top: 1.8em;
+}
+.seguro ul{
+    max-width: 370px;
+    margin-top: 2em;
+    margin-left: 2em;
+}
+.info-seguro-up{
+    height: 100%;
+}
+.info-seguro{
+    height: 100%;
+    max-width: 470px;
+    margin-left: 1em;
+}
+.info-seguro p{
+    margin-left: 1.5em;
+    margin-top: 2em;
+}
+.info-seguro ul{
+    list-style: none;
+    padding: 0;
+    width: 100%;
+    max-width: 400px;
+    margin: 0 auto 0 1.5em;
+}
+.info-seguro ul li{
+    background-color: #FFFFFF;
+    height: 55px;
+    margin-bottom: 1.5em;    
+    padding: 1em 0px 0px 5em !important;
+}
+.info-pago{
+    background:  url(../img/propietario/img_consulta-requisitos-fondo.png)  no-repeat;      
+    background-size: cover;
+    background-position-y: bottom;
+    height: 200px;    
+}
+.info-pago p.fondo{
+    height: 200px;
+    padding-top: 60px;       
+}
+.info-pago .recomendacion{
+    width: 40%;
+    margin: 0 auto;
+}
 .filtro .btn-secondary{
     height: 50px;
     width: 170px;
@@ -471,6 +613,9 @@ section{
     font-family:'GothamBold';
     max-width: 300px;
 }
+.recomendacion p.w-100{
+    max-width: 100%;
+}
 .recomendacion p a{
     background: #BD0F14;
     padding: 0 0.5em;
@@ -503,6 +648,22 @@ ul.icons li.list{
 }   
 ul.icons li.cel{
     background: url(../img/arrendatario/cel.png) no-repeat left top;
+}
+ul.icons li.danos{
+    background-image: url(../img/propietario/icon_danos.svg);
+    background-position-x: 10px;
+}
+ul.icons li.servicios{
+    background-image: url(../img/propietario/icon_servicios-mora.svg);
+    background-position-x: 10px;
+}   
+ul.icons li.cuota{
+    background-image: url(../img/propietario/icon_cuota-administracion.svg);
+    background-position-x: 10px;
+}       
+ul.icons li.canon{
+    background-image: url(../img/propietario/icon_canon-arrendamiento.svg);
+    background-position-x: 10px;
 }       
  /* Carousel*/
 
@@ -541,9 +702,24 @@ ul.icons li.cel{
     left:calc(50% + 25px);
     transform: translate(-50%, -50%);
 }
+.arrendatario-slider{
+    position: relative;
+    display: flex;
+}
+.arrendatario-slider .next{
+    position: absolute;
+    bottom: -40px;
+    right: 40%;
+}
+.arrendatario-slider .prev{
+    position: absolute;
+    bottom: -40px;
+    left: 40%;
+}
 .doc-box{
     max-width: 375px;
     height: 380px;
+    margin: 0 1em;
 }
 .doc-box img{
     width: 100%;
@@ -599,12 +775,34 @@ ul.icons li.cel{
 }
 .citi-bg img.bg-city{
     display: block;
+    position: absolute;
+    top: 51px;
+    left: 0;
+    z-index: 0;
+    height: 498px;
+}
+.col-lg-6 .adv-w,.col-lg-6 .adv-w2{
+    position: relative;
+    z-index: 1;
+}
+.adv-w img{
+    position: absolute;
+    top: 45px;
+}
+.adv-w2 img{
+    position: absolute;
+    top: -55px;
+    left: -20px;
 }
 .consulta{
+    position: relative;
     background: #ffffff;
     box-shadow: 1px 1px 2px #B0B6BA;
+    border: 1px solid #b0b6bab9;
     border-radius: 20px;
     padding: 30px 50px;
+    z-index: 1;
+    height: 600px;
 }
 .consulta h3{
     text-align: left;
@@ -621,13 +819,88 @@ ul.icons li.cel{
     background: #BD0F14;
 }
 .consulta button[type=submit] {
+    font-family:'GothamBold';
     display: block;
-    margin: 2em auto;
+    margin: 4em auto 1em ;
     background: #b0b6ba21;
     border: 1px solid #B0B6BA;
     border-radius: 10px;
     color: #B0B6BA;
     padding: 1em 2em;
+}
+.consulta .dropdown{
+    margin: 0em 0 2em;
+}
+.consulta .dropdown-toggle{
+    font-family:'RobotoRegular';
+    background:#ffffff ;
+    border:1px solid #b0b6ba;
+    height: 50px;
+    width: 100%;
+    text-align: left;
+    padding: 0.375rem 0.75rem;
+    position: relative;
+}
+.consulta .dropdown-toggle::after {
+    flex-shrink: 0;
+    width: 1.25rem;
+    height: 1.25rem;
+    margin-left: auto;
+    content: "";
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23253150'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    background-size: 1.25rem;
+    transition: transform .2s ease-in-out;
+    border: none;
+    position: absolute;
+    right: 20px;    
+}
+.consulta .dropdown-menu{
+    font-family:'RobotoRegular';
+    width: 100%;
+}
+label{
+    font-family:'RobotoBold';
+    font-size: 16px;    
+}
+.consulta input{
+    font-family:'RobotoRegular';
+    height: 50px;
+    border:1px solid #b0b6ba;
+}
+.btn{
+    font-family: 'GothamBold';
+    display: block;
+    margin: 1em auto;        
+    border-radius: 10px;    
+    padding: 1em 2em;
+    font-size: 13px;
+}
+.dark-blue-btn{
+    background:#253150;
+    color: #ffffff;
+}
+.dark-blue-btn:hover{
+    color: #ffffff;
+}
+.red-outline-btn{
+    background: transparent;
+    border: 1px solid #BD0F14;
+    color: #BD0F14;
+}
+.red-outline-btn:hover{
+    color: #BD0F14;
+}
+.est-arrendatario{
+    height: 300px;
+    background: url(../img/arrendatario/img-banner-estudioDigital-fondo.png);
+    background-repeat: no-repeat;
+    background-position: center ;
+    background-size: contain;
+    margin-bottom: 3em;
+}
+.w-17{
+    max-width: 170px;
 }
 /*Footer*/
 footer{
@@ -835,6 +1108,12 @@ footer .lineav{
     .navbar-brand img{
         width: 100%;
     }
+    .doc-box ul {
+        width: 75%;
+    }
+    .consulta h3 {        
+        font-size: 20px;        
+    }
 }
 @media screen and (max-width:1024px) {
     .navbar-brand{
@@ -857,6 +1136,9 @@ footer .lineav{
     }
     .lenguaje{
         background-image: url(../img/lenguaje/movil/banner-tablet_lenguaje_opt.png);
+    }
+    .arrendatario{
+        background-image: url(../img/arrendatario/movil/banner-mobile_arrendatario.png);
     }
     h1{        
         width: 80%;
@@ -1081,6 +1363,68 @@ footer .lineav{
         color: #B0B6BA;
         padding: 1em 0.5em;
         border-radius: 0.25rem;
+    } 
+    .d-lg-none .recomendacion{
+        margin: auto;
+    } 
+    .d-lg-none .recomendacion p{
+        margin: 0 auto;
+        font-size: 18px;
+        max-width: 330px;
+    }  
+    .adv-w{
+        display: none;
+    }
+    .est-arrendatario{
+        height: auto;
+    }
+    .est-arrendatario img{
+        display: block;
+        margin: 0 auto;
+        max-width: 100%;
+    }
+    .doc-box{
+        height: 410px;
+    }
+    .doc-box .low{
+        height: 310px;
+    }
+    .proteger {
+        height: 420px;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+    .info-seguro, .info-seguro-up {
+        height: 100%;
+        max-width: 470px;
+        width: 90%;
+        margin: 1em auto;
+    }
+    .seguro h5, .info-seguro h5 {
+        font-size: 22px;
+    }
+    .info-seguro ul {            
+        width: 90%;        
+        margin: 0 auto;
+    }
+    h2.beneficios{
+        font-size: 22px;
+    }
+    h2.redline.beneficios::after{
+        content: '';
+        position: absolute;    
+        width: 35px;
+        height: 3px;
+        background: #BD0F14;
+        border-radius: 2px;
+        left: 0;
+        top: 3.6em;
+    }    
+    .wb-r{
+        border-right: 1px solid #B0B6BA !important;
+    }
+    .wb-l{
+        border-left: 1px solid #B0B6BA !important;
     }
 }
 @media screen and (max-width:767px){
@@ -1111,6 +1455,43 @@ footer .lineav{
     .search-box.filtro {
         height: 270px;
     }
+    .gris-bg {
+        background: linear-gradient( #F8F8F8 60%, #FFFFFF 20%);
+    }
+    .arrendatario-slider .next{        
+        bottom: -60px;
+        right: 35%;
+    }
+    .arrendatario-slider .prev{        
+        bottom: -60px;
+        left: 35%;
+    }
+    .slide{
+        margin-left: 1em;
+        margin-right: 1em;
+    }
+    .carousel-x4 .slick-prev {
+        position: absolute;
+        top: calc(100% - 25px);
+        left: calc(50% - 55px);
+        transform: translate(-50%, -50%);
+    }
+    .info-pago{
+        height: 450px;
+    }
+    .info-pago .recomendacion {
+        width: 80%;
+        margin: 0 auto 0 6em;
+    }
+    .adv-w2 img {
+        position: absolute;
+        top: -20px;
+        left: -65px;
+    }
+    .seguro ul {
+        width: 90%;
+        margin-left: 1em;
+    }
 }
 @media screen and (max-width:600px) {
     h1{
@@ -1125,7 +1506,7 @@ footer .lineav{
     .banner{
         position: relative;        
         background-position: top;
-        height: 350px;        
+        height: 450px;        
         z-index: 0;
         margin-top: 106px;
     }
@@ -1190,6 +1571,21 @@ footer .lineav{
     }
     .aviso{
         margin-left: 1.5em;
+    }
+}
+
+@media screen and (max-width:480px){
+    .banner{
+        height: 400px;
+    }
+    .consulta{
+        max-width: 350px;
+        display: block;
+        margin: 0 auto;
+        padding: 30px;
+    }
+    .info-pago  .btn{
+        margin: 1em 5em 1em auto;
     }
 }
 
